--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -27,16 +27,22 @@ body {
 h1 {
     font-size: 4.5rem;
     font-weight: 250;
+    margin-block-start: 3rem;
+    margin-block-end: 3rem;
 }
 
 h2 {
     font-size: 3.2rem;
     font-weight: 400;
+    margin-block-start: 2rem;
+    margin-block-end: 2rem;
 }
 
 h3 {
     font-size: 2rem;
     font-weight: 555;
+    margin-block-start: 1rem;
+    margin-block-end: 1rem;
 }
 
 p,
@@ -44,6 +50,9 @@ ul,
 li {
     font-size: 1.2rem;
     font-weight: 400;
+}
+p {
+    font-weight: 200;
 }
 
 section {
@@ -108,7 +117,7 @@ a {
     text-decoration-thickness: 2px;
     text-underline-offset: 2px;
     text-decoration-color: var(--theme-accent);
-    font-weight: 450;
+    font-weight: 300;
     transition: text-decoration-color 0.3s var(--animation-transform);
 }
 a:hover {
@@ -127,4 +136,41 @@ b {
     .headshot {
         width: 33%;
     }
+}
+
+
+.contact-form label{
+        color: var(--theme-accent);
+        margin-bottom: 4px;
+        margin-top: 1rem;
+        font-weight: 300;
+}
+
+input, textarea {
+    border-radius: 8px;
+    padding: 0 1rem;
+    min-height: 45px;
+    font-family: unset;
+}
+
+input::placeholder, textarea::placeholder {
+    color: var(--theme-background);
+    opacity: 0.7;
+}
+
+textarea {
+    padding: 1rem;
+}
+
+button {
+    -webkit-appearance: button;
+    background-color: var(--theme-accent);
+    border: none;
+    padding: 0.8rem;
+    border-radius: 8px;
+    margin-top: 1rem;
+    font-weight: 700;
+    font-size: 1.2rem;
+    font-family: unset;
+    /* text-transform: uppercase; */
 }
