--- a/web/app/assets/styles/article.css
+++ b/web/app/assets/styles/article.css
@@ -1,10 +1,19 @@
 article h1 {
   font-size: 2.2rem;
   font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+
+p {
+  max-width: 75ch;
+  font-size: 1.625rem;
+  font-size: clamp(1.125rem, 1vw + 1rem, 1.625rem);
+  line-height: 1.4;
 }
 
 .published-at {
   font-weight: 100;
+  margin-bottom: 2rem;
 }
 
 .published-at time {
