--- a/web/app/assets/styles/styles.css
+++ b/web/app/assets/styles/styles.css
@@ -34,6 +34,12 @@ h1 {
   margin-block-end: 3rem;
 }
 
+h1.small {
+  font-size: 2.2rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 4.5rem;
@@ -88,7 +94,7 @@ ul.tinkering li::marker {
   content: "🤖";
 }
 
-li {
+.list li{
   padding-left: 4px;
   margin-bottom: 14px;
 }
@@ -193,3 +199,25 @@ button {
   font-family: unset;
   cursor: pointer;
 }
+
+.pill, a.pill {
+  font-size: 0.875rem;
+  /* font-weight: 700; */
+  font-variation-settings: "wght" 300;
+  text-decoration: none;
+  display: inline-block;
+  color: var(--theme-foreground);
+  border: 1px solid var(--theme-foreground);
+  border-radius: 8px;
+  margin: 12px;
+  margin-left: 0;
+  padding: 4px;
+  transition: all 0.3s cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+/* .pill:hover, .pill:focus {
+  font-variation-settings: "wght" 700;
+  border-color: var(--theme-background);
+  color: var(--theme-background);
+  background: var(--theme-foreground)
+} */
