--- a/web/app/assets/styles/article.css
+++ b/web/app/assets/styles/article.css
@@ -1,8 +1,12 @@
+li,
 p {
-  max-width: 75ch;
+  max-width: 70ch;
   font-size: 1.625rem;
-  font-size: clamp(1.125rem, 1vw + 1rem, 1.625rem);
-  line-height: 1.4;
+  font-size: clamp(1.125rem, 1vw + 1rem, 1.425rem);
+}
+ul,
+p {
+  margin-bottom: 3rem;
 }
 
 .published-at {
