--- a/web/app/assets/styles/posts.css
+++ b/web/app/assets/styles/posts.css
@@ -1,11 +1,17 @@
-.post-list, .post-categories {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+.post-list,
+.post-categories {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.post-list li {
+  margin-bottom: 1rem;
+}
+
+.post-categories {
+  display: flex;
 }
 
 .post-category {
-   
-    cursor: pointer;
-    
+  cursor: pointer;
 }
