add resume content and styling

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -39,7 +39,7 @@
 	<body>
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
 
-		<header>
+		<header class="site-header">
 			<a href="/" class="home-link">{{ metadata.title }}</a>
 
 			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
@@ -59,7 +59,7 @@
 			</heading-anchors>
 		</main>
 
-		<footer>
+		<footer class="site-footer">
 			<p><em>Built with <a href="https://www.11ty.dev/">{{ eleventy.generator }}</a></em></p>
 		</footer>
 
