add not-ai footer badge

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -60,6 +60,8 @@
 		</main>
 
 		<footer class="site-footer">
+		<img eleventy:ignore src="/img/Written-By-Human-Not-By-AI-Badge-white@2x.png" width="90" height="90">
+
 			<p><em>Built with <a href="https://www.11ty.dev/">{{ eleventy.generator }}</a></em></p>
 		</footer>
 
