--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,81 +1,27 @@
-@layer theme, base, resume;
+@layer pico, base, components, resume;
 
-@layer theme {
-  /* Defaults */
-  :root {
-    --font-family: -apple-system, system-ui, sans-serif;
-    --font-family-monospace: Consolas, Menlo, Monaco, Andale Mono WT,
-      Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono,
-      Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New,
-      Courier, monospace;
+
+@import url('https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css') layer(pico);
+
+
+@layer base {
+  
+  html {
+    width: 100%;
   }
-
-  /* Theme colors */
-  :root {
-    --color-gray-20: #e0e0e0;
-    --color-gray-50: #c0c0c0;
-    --color-gray-90: #333;
-
-    --background-color: hsl(157, 40%, 86%);
-
-    --text-color: var(--color-gray-90);
-    --text-color-link: hsl(157, 100%, 20%);
-    --text-color-link-active: #2b5f5f;
-    --text-color-link-visited: hsl(157 12% 30% / 1);
-
-    --syntax-tab-size: 2;
-  }
-
-  /* @media (prefers-color-scheme: dark) {
-  :root {
-    --color-gray-20: #e0e0e0;
-    --color-gray-50: #c0c0c0;
-    --color-gray-90: #dad8d8;
-
-    --text-color-link: #1493fb;
-    --text-color-link-active: #6969f7;
-    --text-color-link-visited: #a6a6f8;
-
-    --background-color: hsl(157 69% 6% / 1);
-  }
-} */
-
-  /* Global stylesheet */
-  * {
-    box-sizing: border-box;
+  body {
+    width: 100%;
+    max-width: 80ch;
   }
 
   @view-transition {
     navigation: auto;
   }
-}
 
-@layer base {
-  html,
-  body {
-    padding: 0;
-    margin: 0 auto;
-    font-family: var(--font-family);
-    color: var(--text-color);
-    background-color: var(--background-color);
+  main {
+    padding: 0 5%;
   }
-  html {
-    overflow-y: scroll;
-  }
-  body {
-    max-width: 80ch;
-  }
-
-  /* https://www.a11yproject.com/posts/how-to-hide-content/ */
-  .visually-hidden {
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-  }
+  
 
   /* Fluid images via https://www.zachleat.com/web/fluid-images/ */
   img {
@@ -97,39 +43,41 @@
   iframe {
     aspect-ratio: 16/9;
   }
-
-  p:last-child {
-    margin-bottom: 0;
-  }
-  p {
-    line-height: 1.5;
-  }
-
-  li {
-    line-height: 1.5;
-  }
-
-  a[href] {
-    color: var(--text-color-link);
-  }
-  a[href]:visited {
-    color: var(--text-color-link-visited);
-  }
-  a[href]:hover,
-  a[href]:active {
-    color: var(--text-color-link-active);
-  }
-
-  main,
-  footer {
-    padding: 1rem;
-  }
-  main :first-child {
-    margin-top: 0;
-  }
+  /* -- Fluid Images */
 
   header {
     border-bottom: 1px dashed var(--color-gray-20);
+  }
+
+
+  .home-link {
+    flex-grow: 1;
+    font-size: 1em;
+    font-weight: 700;
+  }
+
+  .home-link:link:not(:hover) {
+    text-decoration: none !important;
+  }
+
+  
+}
+
+@layer components {
+  /* https://www.a11yproject.com/posts/how-to-hide-content/ */
+  .visually-hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
+
+  .site-header {
+    padding: 1rem 1rem;
+    flex-wrap: wrap;
   }
 
   .links-nextprev {
@@ -145,69 +93,6 @@
   }
   .links-nextprev-next {
     text-align: right;
-  }
-
-  table {
-    margin: 1em 0;
-  }
-  table td,
-  table th {
-    padding-right: 1em;
-  }
-
-  pre,
-  code {
-    font-family: var(--font-family-monospace);
-  }
-  pre:not([class*="language-"]) {
-    margin: 0.5em 0;
-    line-height: 1.375; /* 22px /16 */
-    -moz-tab-size: var(--syntax-tab-size);
-    -o-tab-size: var(--syntax-tab-size);
-    tab-size: var(--syntax-tab-size);
-    -webkit-hyphens: none;
-    -ms-hyphens: none;
-    hyphens: none;
-    direction: ltr;
-    text-align: left;
-    white-space: pre;
-    word-spacing: normal;
-    word-break: normal;
-    overflow-x: auto;
-  }
-  code,
-  blockquote {
-    background-color: hsl(157 33% 73% / 1);
-  }
-  code {
-    word-break: break-all;
-    word-break: auto-phrase;
-    padding: 2px 4px;
-    border-radius: 3px;
-  }
-  blockquote {
-    padding: 1rem;
-    margin-inline-start: 1rem;
-    border-radius: 4px;
-    font-style: italic;
-  }
-
-  /* Header */
-  header {
-    display: flex;
-    gap: 1em;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1em;
-  }
-  .home-link {
-    flex-grow: 1;
-    font-size: 1em; /* 16px /16 */
-    font-weight: 700;
-  }
-  .home-link:link:not(:hover) {
-    text-decoration: none;
   }
 
   /* Nav */
@@ -288,25 +173,22 @@
     display: inline-flex;
     flex-wrap: wrap;
     gap: 0.5em;
-    list-style: none;
+    list-style: none !important;
     padding: 0;
     margin: 0;
   }
   .post-metadata time {
     margin-right: 1em;
   }
+
+  .post-metadata li {
+    list-style: none;
+  }
 }
 
 @layer resume {
   section {
     padding-bottom: 1rem;
-  }
-
-  header {
-    padding: 0;
-    gap: 4px;
-    flex-direction: column;
-    align-items: start;
   }
 
   h3 {
@@ -320,13 +202,8 @@
   }
 
   .print-button {
-    display: block;
-    max-height: 40px;
-    appearance: unset;
-    border: 2px solid rgb(153 76 189);
-    color: hsl(281, 56%, 31%);
-    border-radius: 4px;
-    background-color: rgb(220 209 232);
+    /* display: block; */
+    /* max-height: 40px; */
   }
 
   .entry em {
