--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,7 @@
 
 
 @import url('https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css') layer(pico);
-
+@import url('./resume.css') layer(resume);
 
 @layer base {
   
@@ -49,6 +49,10 @@
     border-bottom: 1px dashed var(--color-gray-20);
   }
 
+  footer {
+    padding: 1rem;
+  }
+
 
   .home-link {
     flex-grow: 1;
@@ -84,12 +88,12 @@
     display: flex;
     justify-content: space-between;
     gap: 0.5em 1em;
-    list-style: "";
     border-top: 1px dashed var(--color-gray-20);
     padding: 1em 0;
   }
   .links-nextprev > * {
     flex-grow: 1;
+    list-style: none;
   }
   .links-nextprev-next {
     text-align: right;
@@ -182,106 +186,5 @@
 
   .post-metadata li {
     list-style: none;
-  }
-}
-
-@layer resume {
-  section {
-    padding-bottom: 1rem;
-  }
-
-  h3 {
-    margin: 0;
-  }
-
-  .resume-header {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-
-  .entry em {
-    padding: 0 2px;
-    font-style: normal;
-    background-color: var(--pico-text-selection-color);
-  }
-
-  
-
-  .tag-list {
-    display: flex;
-    align-items: start;
-    flex-wrap: wrap;
-    gap: 4px;
-
-    padding: 0;
-    
-  }
-
-  .tag-list li {
-    background-color: var(--pico-primary-background);
-    border-color: var(--pico-primary-border);
-    color: var(--pico-primary-inverse);
-    padding: 2px 6px;
-    border-radius: 4px;
-    font-family: monospace;
-    list-style: none;
-  }
-
-  @media print {
-    @page {
-      margin: 0%;
-    }
-
-    * {
-      -webkit-print-color-adjust: exact; /* Chrome, Safari 6 – 15.3, Edge */
-      print-color-adjust: exact; /* Firefox 97+, Safari 15.4+ */
-    }
-    .site-header,
-    .site-footer,
-    .print-button {
-      display: none;
-    }
-
-    .summary h2 {
-      display: none;
-    }
-
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p {
-      margin: 0;
-    }
-
-    ul {
-      margin: 0;
-    }
-
-    section {
-      margin: 0;
-    }
-
-    html {
-      font-size: 12px;
-    }
-
-    body {
-      max-width: 90%;
-    }
-
-    html,
-    body,
-    em {
-      background-color: unset;
-    }
-
-    em,
-    .skill-list li {
-      background-color: hsl(0, 0%, 90%) !important;
-    }
   }
 }
