--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,10 +1,15 @@
 @layer pico, base, components, resume;
 
 
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css') layer(pico);
+
 @import url('./resume.css') layer(resume);
 
 @layer base {
+  :root {
+    --pico-font-family-sans-serif: "Atkinson Hyperlegible Next","Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,Helvetica,Arial,"Helvetica Neue",sans-serif,var(--pico-font-family-emoji);
+  }
   
   html {
     width: 100%;
