--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,6 +13,20 @@ layer(pico);
       Cantarell, Helvetica, Arial, "Helvetica Neue", sans-serif,
       var(--pico-font-family-emoji);
   }
+
+  /* Dark color scheme (Auto) */
+  /* Automatically enabled if user has Dark mode enabled */
+  @media only screen and (prefers-color-scheme: dark) {
+    :root:not([data-theme]) {
+      --pico-muted-color: #8198c5;
+    }
+  }
+
+  /* Dark color scheme (Forced) */
+  /* Enabled if forced with data-theme="dark" */
+  [data-theme="dark"] {
+    --pico-muted-color: #8198c5;
+  }
 }
 
 @layer base {
@@ -61,6 +75,15 @@ layer(pico);
 
   footer {
     padding: 1rem;
+  }
+
+  figure {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 1rem;
+    border-left: 2px solid var(--pico-muted-border-color);
+    margin-bottom: 0.5rem;
   }
 
   .home-link {
